# ros2-esp32-mobile-robot

./: LICENSE  README.md
Scripts/: udp_test.py
Scripts/esp32_interupt_encoder/: Encoder.cpp  esp32_interupt_encoder.ino
Scripts/esp32_udp_sample/: esp32_udp.cpp  esp32_udp.h  esp32_udp_sample.ino  readme.md
hardware/esp32_firmware/Encoder/esp32_motor_control_encoder/: Encoder.cpp  Encoder.h  esp32_motor.cpp  esp32_motor.h  esp32_motor_control_encoder.ino  esp32_udp.cpp  esp32_udp.h  readme.md
hardware/esp32_firmware/motor_control/: motor_control.ino  readme.md
hardware/esp32_firmware/motor_control_serial_wifi/: readme.md
hardware/esp32_firmware/motor_control_serial_wifi/motor_control_serial/: esp32_motor.cpp  esp32_motor.h  motor_control_serial.ino  readme.md
hardware/esp32_firmware/motor_control_serial_wifi/motor_control_wifi/: esp32_motor.cpp  esp32_motor.h  esp32_udp.h  motor_control_wifi.ino  readme.md
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh  package.xml
install/py_udp_communication/lib/py_udp_communication/: receiver  sender
install/py_udp_communication/share/py_udp_communication/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/py_udp_sender/lib/py_udp_sender/: receiver  sender
log/: latest_build
src/custom_interfaces/: CMakeLists.txt
src/py_udp_communication/: readme.md  setup.cfg  setup.py
src/py_udp_sender/: package.xml  setup.cfg  setup.py
src/py_udp_sender/py_udp_sender/: py_udp_receiver.py
(+17 files in other folders)
